--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculatrice</title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -20,11 +21,11 @@
         <button id="five">5</button>
         <button id="six">6</button>
         <button id="decimal">.</button>
+        <button id="zero">0</button>
         <button id="one">1</button>
         <button id="two">2</button>
         <button id="three">3</button>
         <button id="equals">=</button>
-        <button id="zero">0</button>
     </div>
     <script src="script.js"></script>
 </body>
